# goSearch

./: .gitignore  CMakeLists.txt  Dockerfile  PLAN.md  README.md  build.cmd  build.sh  compose.yaml  go.mod  search.sh  searchUI.sh
.github/workflows/: go.yml
cmake/: Dependencies.cmake
cmd/search/: main.go  main_test.go
cmd/searchui/: main.go
config/: config.properties  logging.properties
internal/search/: element.go  engine.go  fileutils.go
src/: main_cli.cpp  main_gui.cpp
src/archive/: ArchiveHandler.cpp  ArchiveHandler.hpp
src/search/: SearchElement.cpp  SearchElement.hpp  SearchEngine.cpp  SearchEngine.hpp  SearchEngineEvent.hpp  SearchEngineListener.hpp
src/ui/: AutoCompleter.cpp  AutoCompleter.hpp  FramePersistenceHandler.cpp  FramePersistenceHandler.hpp  SearchListener.cpp  SearchListener.hpp  SortedPersistedAutoCompleter.cpp  SortedPersistedAutoCompleter.hpp  Theme.cpp  Theme.hpp  UILauncher.cpp  UILauncher.hpp
src/ui/results/: ListResultRenderer.cpp  ListResultRenderer.hpp  ResultItemDelegate.cpp  ResultItemDelegate.hpp  ResultRenderer.hpp  ResultTableModel.cpp  ResultTableModel.hpp  TablePersistenceHandler.cpp  TablePersistenceHandler.hpp  TableResultRenderer.cpp  TableResultRenderer.hpp
src/ui/results/actions/: AbstractResultAction.cpp  AbstractResultAction.hpp  CopyToClipBoardAction.cpp  CopyToClipBoardAction.hpp  DeleteAction.cpp  DeleteAction.hpp  EditAction.cpp  EditAction.hpp  ExploreFileLocationAction.cpp  ExploreFileLocationAction.hpp  OpenAction.cpp  OpenAction.hpp
src/util/: Configuration.cpp  Configuration.hpp  ConfigurationProperty.hpp  FileUtils.cpp  FileUtils.hpp  Logger.cpp  Logger.hpp  Persistable.hpp  PreferencesManager.cpp  PreferencesManager.hpp  StringUtils.hpp
test/: CMakeLists.txt  ConfigurationTest.cpp  FileUtilsTest.cpp  SearchElementTest.cpp  SearchEngineTest.cpp  StringUtilsTest.cpp
